kustomize/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-checker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-checker
  template:
    metadata:
      labels:
        app: docker-registry-checker
    spec:
      serviceAccountName: sa-docker-registry-checker-dev
      containers:
      - name: docker-registry-checker
        image: docker-registry-checker
        livenessProbe:
          httpGet:
            path: /_health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 60
